# slvm-native

./: CMakeLists.txt  README.md
include/slvm/: classes.h  datastructures.h  dynrun.h  lifecycle.h  memory.h  objectmodel.h  send.h  slvm-dynruntime.h
include/slvm/classes/: collections.h  compactIndices.h  compactIndices.inc  context.h  ffi.h  kernel.h  magnitude.h
include/slvm/spur/: objectmodel.h
src/: CMakeLists.txt  datastructures.c  lifecycle.c  memory.c  memory_unix.c
src/classes/: collections.c  context.c  ffi.c  kernel.c  magnitude.c
src/native/x86/: send.c  trampolines.nasm  trampolines.s
src/native/x86_64/: trampolines.nasm
src/spur/: objectmodel.c
